--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,7 +13,8 @@
     </div>
 </nav>
 
-<div class="container">
+<div class = "col-sm-12"><br></div>
+<div class="container col-sm-6 col-lg-6">
     <form>
         <div class="form-group">
             <label for="inputUsername">Username</label>
@@ -34,7 +35,7 @@
                 <option>Mentor</option>
             </select>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-light btn-outline-dark btn-block">Submit</button>
     </form>
 
 </div>
