updated some handlebars, created post route for creating users

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Sign Up <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/signup">Sign Up <span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
