--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -7,14 +7,14 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Sign In</a>
+                <a class="nav-link" href="/">Sign In</a>
             </li>
         </ul>
     </div>
 </nav>
 
 <div class="container">
-    <form>
+    <form class="newUser">
         <div class="form-group">
             <label for="inputUsername">Username</label>
             <input type="username" class="form-control" id="inputUsername" aria-describedby="username">
