--- a/views/projectx.handlebars
+++ b/views/projectx.handlebars
@@ -13,18 +13,21 @@
     </div>
 </nav>
 
-    <div class="jumbotron" style="background: url(https://www.careergirls.org/wp-content/uploads/2015/06/Computer_Programmer1920X10180.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; height:100%;">
-       
+<div class="jumbotron"
+    style="background: url(https://www.careergirls.org/wp-content/uploads/2015/06/Computer_Programmer1920X10180.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; height:100%;">
+
     <h1 class="display-4">What are we learning today?</h1>
     <div class="btn-group">
         <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Select Subject
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Select Subject
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Html</a>
-              <a class="dropdown-item" href="#">Css</a>
-              <a class="dropdown-item" href="#">Javascript</a>
+                <a class="dropdown-item" href="#">Html</a>
+                <a class="dropdown-item" href="#">Css</a>
+                <a class="dropdown-item" href="#">Javascript</a>
             </div>
-          </div>
-  </div>
+        </div>
+    </div>
+</div>
