updated some handlebars, created post route for creating users

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -17,7 +17,8 @@
                         <input type="password" class="form-control" id="inputPassword">
                     </div>
                     <button type="submit" class="btn btn-light btn-outline-dark btn-block">SUBMIT</button>
-                    <button type="signup" class="btn btn-light btn-outline-dark btn-block">SIGN UP</button>
+                    <button type="button" class="btn btn-light btn-outline-dark btn-block signUp"
+                        onclick="window.location.href = '/signup';">SIGN UP</button>
 
                 </form>
 
