updated main account page

--- a/views/projectx.handlebars
+++ b/views/projectx.handlebars
@@ -16,18 +16,61 @@
 <div class="jumbotron"
     style="background: url(https://www.careergirls.org/wp-content/uploads/2015/06/Computer_Programmer1920X10180.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; height:100%;">
 
-    <h1 class="display-4">What are we learning today?</h1>
-    <div class="btn-group">
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Select Subject
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Html</a>
-                <a class="dropdown-item" href="#">Css</a>
-                <a class="dropdown-item" href="#">Javascript</a>
+    <h1 class="display-4">HTML Basics</h1>
+</div>
+
+<div class="row" id="videoSection">
+    <div class="col-sm-3">
+        <div class="card">
+            <div class="card-body">
+                Computer Programming > Intro into HTML > HTML Basics
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <a href="">HTML</a>
+                <br>
+                <a href="">CSS</a>
+                <br>
+                <a href="">Javascript</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <iframe width="550" height="315" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+        <br>
+        <h4>Intro into HTML</h4>
+    </div>
+    <div class="col-sm-3">
+        <h6>For additional information:</h6>
+        <div class="card">
+            <div class="card-body">
+
             </div>
         </div>
     </div>
 </div>
+<br>
+
+<div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6">
+        <h6>Questions:</h6>
+        <br>
+        <form>
+            <div class="form-group">
+                <textarea class="form-control" id="commentSection" rows="1"></textarea>
+            </div>
+            <button type="submit" class="btn btn-success submit">Submit</button>
+        </form>
+        <br>
+        <div class="row">
+            <div class="comment-container">Comments:
+            </div>
+        </div>
+
+    </div>
+</div>
+<script src="../public/js/comments.js" type="text/javascript"></script>
