--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -15,7 +15,7 @@
 
 <div class="col-sm-12"><br></div>
 <div class="container col-sm-6 col-lg-6">
-    <form>
+    <form class="newUser">
         <div class="form-group">
             <label for="inputUsername">Username</label>
             <input type="username" class="form-control" id="inputUsername" aria-describedby="username">
