--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,19 @@
-.container{
-    background-color: white;
-}
-
 .form-group {
-    padding: 30px 0;
-    background-color: #006dcc;
+  padding: 5;
+  margin: 10 10;
+}
+  body, html {
+    height: 100%;
+  }
+  .bg {
+    /* The image used */
+    background-image: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full page/img(20).jpg");
+  
+    /* Full height */
+    height: 100%;
+  
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
