--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,13 +1,16 @@
 <div class="jumbotron"
-    style="background: url(https://www.careergirls.org/wp-content/uploads/2015/06/Computer_Programmer1920X10180.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
+style="background: url(https://www.careergirls.org/wp-content/uploads/2015/06/Computer_Programmer1920X10180.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
+
 
     <div class="container">
+       
         <div class="row">
 
             <div class="col-sm-4"></div>
 
             <div class="col-sm-4">
                 <form class="card">
+                    <h4 class ="text-center">PROJECT X</h4>
                     <div class="form-group">
                         <label for="inputUsername">Username</label>
                         <input type="username" class="form-control" id="inputUsername" aria-describedby="username">
@@ -17,8 +20,7 @@
                         <input type="password" class="form-control" id="inputPassword">
                     </div>
                     <button type="submit" class="btn btn-light btn-outline-dark btn-block">SUBMIT</button>
-                    <button type="button" class="btn btn-light btn-outline-dark btn-block signUp"
-                        onclick="window.location.href = '/signup';">SIGN UP</button>
+                    <button type="signup" class="btn btn-light btn-outline-dark btn-block">SIGN UP</button>
 
                 </form>
 
@@ -27,8 +29,7 @@
     </div>
 
 
-    <nav class="navbar fixed-bottom navbar-light bg-light">
-        <a class="navbar-brand" href="#">Project X</a>
+    <nav class="navbar fixed-bottom nnavbar-dark bg-dark">
+        <a class="navbar-brand align-content-center"></a>
 
     </nav>
-</div>
