--- a/views/projectx.handlebars
+++ b/views/projectx.handlebars
@@ -14,7 +14,7 @@
 </nav>
 
 <div class="jumbotron"
-    style="background: url(https://www.careergirls.org/wp-content/uploads/2015/06/Computer_Programmer1920X10180.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; height:100%;">
+    style="background: url(https://www.careergirls.org/wp-content/uploads/2015/06/Computer_Programmer1920X10180.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
 
     <h1 class="display-4">HTML Basics</h1>
 </div>
