--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Project X</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -7,15 +7,15 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="/">Sign In</a>
+                <a class="nav-link" href="#">Sign In</a>
             </li>
         </ul>
     </div>
 </nav>
 
-<div class="col-sm-12"><br></div>
+<div class = "col-sm-12"><br></div>
 <div class="container col-sm-6 col-lg-6">
-    <form class="newUser">
+    <form>
         <div class="form-group">
             <label for="inputUsername">Username</label>
             <input type="username" class="form-control" id="inputUsername" aria-describedby="username">
