--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,7 +7,7 @@
             <div class="col-sm-4"></div>
 
             <div class="col-sm-4">
-                <form class="card">
+                <form class="card signIn">
                     <div class="form-group">
                         <label for="inputUsername">Username</label>
                         <input type="username" class="form-control" id="inputUsername" aria-describedby="username">
