added handlebar pages

--- a/views/pages/javascript.handlebars
+++ b/views/pages/javascript.handlebars
@@ -16,14 +16,14 @@
 <div class="jumbotron"
     style="background: url(https://www.careergirls.org/wp-content/uploads/2015/06/Computer_Programmer1920X10180.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; height:100%;">
 
-    <h1 class="display-4">HTML Basics</h1>
+    <h1 class="display-4" id="jumboTitle">Javascript Basics</h1>
 </div>
 
 <div class="row" id="videoSection">
     <div class="col-sm-3">
         <div class="card">
             <div class="card-body">
-                Computer Programming > Intro into HTML > HTML Basics
+                Computer Programming > Intro into Javascript > Javascript Basics
             </div>
         </div>
         <div class="card">
@@ -36,19 +36,36 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-6">
-        <iframe width="550" height="315" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </iframe>
+    <div class="col-sm-6" id="codingVid">
+        <iframe width="550" height="450" src="https://www.youtube.com/embed/hdI2bqOjy3c" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
         <br>
-        <h4>Intro into HTML</h4>
+
     </div>
     <div class="col-sm-3">
         <h6>For additional information:</h6>
         <div class="card">
             <div class="card-body">
-
+                <div class="stackApi">Search Stack Overflow:</div>
+                <br>
+                <div class="youtubeApi">Search for additional videos:</div>
+                <br>
             </div>
+        </div>
+    </div>
+</div>
+<br>
+<div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6">
+        <div class="videoTitle">Intro into Javascript</div>
+        <br>
+        <div class="vidInfo">
+            <p>
+                This is a crash course on Javascript for beginners.
+
+            </p>
         </div>
     </div>
 </div>
@@ -57,7 +74,7 @@
 <div class="row">
     <div class="col-sm-3"></div>
     <div class="col-sm-6">
-        <h6>Questions:</h6>
+        <div class="commentTitle">Questions:</div>
         <br>
         <form>
             <div class="form-group">
@@ -73,4 +90,3 @@
 
     </div>
 </div>
-<script src="/comment.js" type="text/javascript"></script>
