--- a/views/javascript.handlebars
+++ b/views/javascript.handlebars
@@ -28,11 +28,11 @@
         </div>
         <div class="card">
             <div class="card-body">
-                <a href="">HTML</a>
+                <a href="/html">HTML</a>
                 <br>
-                <a href="">CSS</a>
+                <a href="/css">CSS</a>
                 <br>
-                <a href="">Javascript</a>
+                <a href="/javascript">Javascript</a>
             </div>
         </div>
     </div>
