--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+{{!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Project X</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,15 +7,19 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Sign In</a>
+                <a class="nav-link" href="/">Sign In</a>
             </li>
         </ul>
     </div>
-</nav>
+</nav> --}}
+
+<div class="jumbotron"
+    style="background: url(https://www.careergirls.org/wp-content/uploads/2015/06/Computer_Programmer1920X10180.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; height:100%;">
+
 
 <div class="col-sm-12"><br></div>
 <div class="container col-sm-6 col-lg-6">
-    <form class="newUser">
+    <form class="card newUser">
         <div class="form-group">
             <label for="inputUsername">Username</label>
             <input type="username" class="form-control" id="inputUsername" aria-describedby="username">
@@ -36,6 +40,13 @@
             </select>
         </div>
         <button type="submit" class="btn btn-light btn-outline-dark btn-block">Submit</button>
+
+        <p> Already have an account? <a href="/">Sign In</a></p>
     </form>
 
 </div>
+
+  <nav class="navbar fixed-bottom nnavbar-dark bg-dark">
+        <a class="navbar-brand align-content-center"></a>
+
+    </nav>
