--- a/views/html.handlebars
+++ b/views/html.handlebars
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Project X</a>
+<nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand justify-content-center">Project X</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
