comments can now be added to table

--- a/views/html.handlebars
+++ b/views/html.handlebars
@@ -81,7 +81,7 @@
             <div class="form-group">
                 <textarea class="form-control" id="commentSection" rows="1"></textarea>
             </div>
-            <button type="submit" class="btn btn-success submit">Submit</button>
+            <button type="submit" class="btn btn-success submit submitComment" sectionId="html">Submit</button>
         </form>
         <br>
         <div class="row">
