--- a/views/javascript.handlebars
+++ b/views/javascript.handlebars
@@ -80,7 +80,7 @@
             <div class="form-group">
                 <textarea class="form-control" id="commentSection" rows="1"></textarea>
             </div>
-            <button type="submit" class="btn btn-success submit">Submit</button>
+            <button type="submit" class="btn btn-success submit submitComment" sectionId="javascript">Submit</button>
         </form>
         <br>
         <div class="row">
