--- a/views/html.handlebars
+++ b/views/html.handlebars
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Log Out <span class="sr-only">(current)</span></a>
+                <a class="nav-link logOut" href="/">Log Out <span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
