--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,15 @@
 
 .commentTitle {
     font-size: 17px;
-    padding-bottom: 15px;
+    padding-bottom: 5px;
     border-bottom: lightgray solid 1px;
+}
+
+.comment-container {
+    padding-bottom: 10px;
+    border-top:  lightgray solid 1px;
+}
+
+#userComments {
+    padding-bottom: 10px;
 }
