--- a/views/javascript.handlebars
+++ b/views/javascript.handlebars
@@ -1,5 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Project X</a>
+<nav class="navbar navbar-expand-lg">
+    
+      <a class="navbar-brand" href="#">
+          <img src="projectx_logo.png" alt="" class="img-fluid float-left">
+        </a>
+ Project X
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -14,7 +18,7 @@
 </nav>
 
 <div class="jumbotron"
-    style="background: url(https://www.careergirls.org/wp-content/uploads/2015/06/Computer_Programmer1920X10180.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; height:100%;">
+    style="background: url(https://www.careergirls.org/wp-content/uploads/2015/06/Computer_Programmer1920X10180.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
 
     <h1 class="display-4" id="jumboTitle">Javascript Basics</h1>
 </div>
@@ -41,7 +45,6 @@
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <br>
-
     </div>
     <div class="col-sm-3">
         <h6>For additional information:</h6>
@@ -63,9 +66,10 @@
         <br>
         <div class="vidInfo">
             <p>
-                This is a crash course on Javascript for beginners.
-
+                A crash course in Javascript. Learn to use classes, arrow functions, and create forms with on click
+                events.
             </p>
+
         </div>
     </div>
 </div>
