--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,47 +1,35 @@
-{{!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Project X</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/">Sign In</a>
-            </li>
-        </ul>
-    </div>
-</nav> --}}
+
 
 <div class="jumbotron"
     style="background: url(https://www.careergirls.org/wp-content/uploads/2015/06/Computer_Programmer1920X10180.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; height:100%;">
 
 
-    <div class="col-sm-12"><br></div>
     <div class="container col-sm-6 col-lg-6">
         <form class="card newUser">
+       
+             <h5 class="text-center"> <img src ="projectx_logo.png" class="logohome"> PROJECT X</h5>
             <div class="form-group">
-                <label for="inputUsername">Username</label>
+                <label for="inputUsername"><p>Username</p></label>
                 <input type="username" class="form-control" id="inputUsername" aria-describedby="username">
             </div>
             <div class="form-group">
-                <label for="inputEmail">Email Address</label>
+                <label for="inputEmail"><p>Email Address</p></label>
                 <input type="email" class="form-control" id="inputEmail">
             </div>
             <div class="form-group">
-                <label for="inputPassword">Password</label>
+                <label for="inputPassword"><p>Password</p></label>
                 <input type="password" class="form-control" id="inputPassword">
             </div>
             <div class="form-group">
-                <label for="roleSelect">Select your role</label>
+                <label for="roleSelect"><p>Select your role</p></label>
                 <select class="form-control" id="roleSelect">
                     <option>Student</option>
                     <option>Mentor</option>
                 </select>
             </div>
-            <button type="submit" class="btn btn-light btn-outline-dark btn-block">Submit</button>
+            <button type="submit" class="btn btn-light btn-outline-dark btn-block"><h5>Submit</h5></button>
 
-            <p> Already have an account? <a href="/">Sign In</a></p>
+            <p id = "signin"> &nbsp; Already have an account? <a href="/">Sign In</a></p>
         </form>
 
     </div>
