--- a/views/css.handlebars
+++ b/views/css.handlebars
@@ -45,9 +45,13 @@
     </div>
     <div class="col-sm-3">
         <h6>For additional information:</h6>
-        <div class="card">
+        <div class="card" id="stackCard">
             <div class="card-body">
-                <div class="stackApi">Search Stack Overflow:</div>
+                <div class="stackApi">Search Stack Overflow:
+                    <input type="text" id="search"><button id="stackBtn">submit</button>
+                    <br>
+                    <div class="stackResults"></div>
+                </div>
                 <br>
                 <div class="youtubeApi">Search for additional videos:</div>
                 <br>
