--- a/views/html.handlebars
+++ b/views/html.handlebars
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="col-sm-6" id="codingVid">
-        <iframe width="550" height="450" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0"
+        <iframe width="615" height="450" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
         <br>
@@ -45,12 +45,13 @@
     </div>
     <div class="col-sm-3">
         <h6>For additional information:</h6>
-        <div class="card">
+        <div class="card" id="stackCard">
             <div class="card-body">
-                <div class="stackApi">Search Stack Overflow:</div>
-                <br>
-                <div class="youtubeApi">Search for additional videos:</div>
-                <br>
+                <div class="stackApi">Search Stack Overflow:
+                    <input type="text" id="search"><button id="stackBtn">submit</button>
+                    <br>
+                    <div class="stackResults"></div>
+                </div>
             </div>
         </div>
     </div>
@@ -102,7 +103,7 @@
                 <div class="col-sm-8">{{body}}</div>
                 <div class="col-sm-4">
                     <button type="submit" data-id="{{id}}" data-username="{{user}}"
-                        class="btn btn-success submit editComment">edit</button>
+                        class="btn btn-success submit editComment"><i class="far fa-edit"></i></button>
                     <button type="submit" data-id="{{id}}" data-username="{{user}}"
                         class="btn btn-success submit deleteComment">delete</button>
                 </div>
