--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -20,8 +20,8 @@
                         <label for="inputPassword"><p>Password</p></label>
                         <input type="password" class="form-control" id="inputPassword">
                     </div>
-                    <button type="submit" class="btn btn-light btn-outline-dark btn-block"><h5>SUBMIT</h5></button>
-                    <button type="signup" class="btn btn-light btn-outline-dark btn-block"
+                    <button type="submit" class="btn btn-light btn-outline-dark btn-block btnhome"><h5>SUBMIT</h5></button>
+                    <button type="signup" class="btn btn-light btn-outline-dark btn-block btnhome"
                         onclick="window.location.href = '/signup';"><h5>SIGN UP</h5></button>
 
                 </form>
