--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -27,7 +27,7 @@
                     <option>Mentor</option>
                 </select>
             </div>
-            <button type="submit" class="btn btn-light btn-outline-dark btn-block"><h5>Submit</h5></button>
+            <button type="submit" class="btn btn-light btn-outline-dark btn-block btnfrm"><h5>Submit</h5></button>
 
             <p id = "signin"> &nbsp; Already have an account? <a href="/">Sign In</a></p>
         </form>
