styling the edit and del btn

--- a/views/html.handlebars
+++ b/views/html.handlebars
@@ -103,9 +103,10 @@
                 <div class="col-sm-8">{{body}}</div>
                 <div class="col-sm-4">
                     <button type="submit" data-id="{{id}}" data-username="{{user}}"
-                        class="btn btn-success submit editComment"><i class="far fa-edit"></i></button>
+                        class="btn btn-success commentBtn submit editComment"><i class="far fa-edit fa-sm"></i></button>
                     <button type="submit" data-id="{{id}}" data-username="{{user}}"
-                        class="btn btn-success submit deleteComment">delete</button>
+                        class="btn btn-success commentBtn submit deleteComment"><i
+                            class="far fa-trash-alt fa-sm"></i></button>
                 </div>
             </div>
             {{/each}}
