--- a/views/html.handlebars
+++ b/views/html.handlebars
@@ -82,7 +82,7 @@
             <div class="form-group">
                 <textarea class="form-control" id="commentSection" rows="1"></textarea>
             </div>
-            <button type="submit" class="btn btn-success submit submitComment" sectionId="html">Submit</button>
+            <button type="submit" class="btn btn-info submit submitComment" sectionId="html">Submit</button>
         </form>
     </div>
 </div>
@@ -103,9 +103,9 @@
                 <div class="col-sm-8">{{body}}</div>
                 <div class="col-sm-4">
                     <button type="submit" data-id="{{id}}" data-username="{{user}}"
-                        class="btn btn-success commentBtn submit editComment"><i class="far fa-edit fa-sm"></i></button>
+                        class="btn btn-info commentBtn submit editComment"><i class="far fa-edit fa-sm"></i></button>
                     <button type="submit" data-id="{{id}}" data-username="{{user}}"
-                        class="btn btn-success commentBtn submit deleteComment"><i
+                        class="btn btn-info commentBtn submit deleteComment"><i
                             class="far fa-trash-alt fa-sm"></i></button>
                 </div>
             </div>
