--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,6 +47,16 @@
     border-bottom: lightgray solid 1px;
 }
 
+#userName {
+  margin-left: 5px;
+  margin-bottom: 10px;
+}
+
+.submitComment {
+  margin-left: 10px;
+  margin-top: 5px;
+}
+
 img{
   height: 20%;
   width: 10%;
@@ -59,6 +69,7 @@ img{
 
 #userComments {
     padding-bottom: 10px;
+    margin-left: 5px;
 }
 
 .btnfrm{
