--- a/views/css.handlebars
+++ b/views/css.handlebars
@@ -105,9 +105,11 @@
                 <div class="col-sm-8 commentBody" id="commentId{{id}}">{{body}}</div>
                 <div class="col-sm-4">
                     <button type="submit" data-id="{{id}}" data-username="{{user}}" data-editorsave="edit"
-                        class="btn btn-success submit editComment" id="editId{{id}}">edit</button>
+                        class="btn btn-info submit editComment" id="editId{{id}}"><i
+                            class="far fa-edit fa-sm"></i></button>
                     <button type="submit" data-id="{{id}}" data-username="{{user}}"
-                        class="btn btn-success submit deleteComment" id="deleteId{{id}}">delete</button>
+                        class="btn btn-info submit deleteComment" id="deleteId{{id}}"><i
+                            class="far fa-trash-alt fa-sm"></i></button>
                 </div>
             </div>
             {{/each}}
