--- a/views/css.handlebars
+++ b/views/css.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand">Project X</a>
+    <img src="projectx_logo.png" alt="" class="img-fluid float-left codelogo"> &nbsp; <h5>Project X</h5>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
     <div class="col-sm-3">
         <div class="card">
             <div class="card-body">
-                Computer Programming > Intro into CSS > CSS Basics
+              <p>  Computer Programming > Intro into CSS > CSS Basics</p>
             </div>
         </div>
         <div class="card">
