--- a/views/javascript.handlebars
+++ b/views/javascript.handlebars
@@ -1,9 +1,7 @@
 <nav class="navbar navbar-expand-lg">
 
-    <a class="navbar-brand" href="#">
-        <img src="projectx_logo.png" alt="" class="img-fluid float-left">
-    </a>
-    Project X
+   
+        <img src="projectx_logo.png" alt="" class="img-fluid float-left codelogo"> &nbsp; <h5>Project X</h5>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,7 +25,7 @@
     <div class="col-sm-3">
         <div class="card">
             <div class="card-body">
-                Computer Programming > Intro into Javascript > Javascript Basics
+                <p>Computer Programming > Intro into Javascript > Javascript Basics</p>
             </div>
         </div>
         <div class="card">
@@ -48,13 +46,9 @@
     </div>
     <div class="col-sm-3">
         <h6>For additional information:</h6>
-        <div class="card" id="stackCard">
+        <div class="card">
             <div class="card-body">
-                <div class="stackApi">Search Stack Overflow:
-                    <input type="text" id="search"><button id="stackBtn">submit</button>
-                    <br>
-                    <div class="stackResults"></div>
-                </div>
+                <div class="stackApi">Search Stack Overflow:</div>
                 <br>
                 <div class="youtubeApi">Search for additional videos:</div>
                 <br>
@@ -100,20 +94,18 @@
             <br>
 
             {{#each comments}}
-            <div class="row">
-                <div class="col-sm-6" id="userName">
+            <div class="row" id="userName">
+                <div class="col-sm-6">
                     {{user}}
                 </div>
             </div>
             <div class="row" id="userComments">
-                <div class="col-sm-8 commentBody" id="commentId{{id}}">{{body}}</div>
+                <div class="col-sm-8">{{body}}</div>
                 <div class="col-sm-4">
-                    <button type="submit" data-id="{{id}}" data-username="{{user}}" data-editorsave="edit"
-                        class="btn btn-info submit editComment" id="editId{{id}}"><i
-                            class="far fa-edit fa-sm"></i></button>
                     <button type="submit" data-id="{{id}}" data-username="{{user}}"
-                        class="btn btn-info submit deleteComment" id="deleteId{{id}}"><i
-                            class="far fa-trash-alt fa-sm"></i></button>
+                        class="btn btn-success submit editComment">edit</button>
+                    <button type="submit" data-id="{{id}}" data-username="{{user}}"
+                        class="btn btn-success submit deleteComment">delete</button>
                 </div>
             </div>
             {{/each}}
