--- a/views/css.handlebars
+++ b/views/css.handlebars
@@ -23,7 +23,7 @@
     <div class="col-sm-3">
         <div class="card">
             <div class="card-body">
-              <p>  Computer Programming > Intro into CSS > CSS Basics</p>
+                <p> Computer Programming > Intro into CSS > CSS Basics</p>
             </div>
         </div>
         <div class="card">
@@ -52,9 +52,6 @@
                     <br>
                     <div class="stackResults"></div>
                 </div>
-                <br>
-                <div class="youtubeApi">Search for additional videos:</div>
-                <br>
             </div>
         </div>
     </div>
@@ -84,7 +81,7 @@
             <div class="form-group">
                 <textarea class="form-control" id="commentSection" rows="1"></textarea>
             </div>
-            <button type="submit" class="btn btn-success submit submitComment" sectionId="css">Submit</button>
+            <button type="submit" class="btn btn-info submit submitComment" sectionId="css">Submit</button>
         </form>
     </div>
 </div>
