--- a/views/html.handlebars
+++ b/views/html.handlebars
@@ -40,6 +40,8 @@
         <iframe width="550" height="450" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
+
+         
         <br>
 
     </div>
@@ -47,7 +49,7 @@
         <h6>For additional information:</h6>
         <div class="card" id="stackCard">
             <div class="card-body">
-                <div class="stackApi">Search Stack Overflow:
+                <div class="stackApi"> <p>Search Stack Overflow:<br></p>
                     <input type="text" id="search"><button id="stackBtn">submit</button>
                     <br>
                     <div class="stackResults"></div>
