--- a/views/javascript.handlebars
+++ b/views/javascript.handlebars
@@ -44,11 +44,11 @@
 
         <br>
     </div>
-    <div class="col-sm-3">
+   <div class="col-sm-3">
         <h6>For additional information:</h6>
-        <div class="card">
+        <div class="card" id="stackCard">
             <div class="card-body">
-                <div class="stackApi">Search Stack Overflow:
+                <div class="stackApi"> <p>Search Stack Overflow:<br></p>
                     <input type="text" id="search"><button id="stackBtn">submit</button>
                     <br>
                     <div class="stackResults"></div>
