--- a/views/css.handlebars
+++ b/views/css.handlebars
@@ -47,7 +47,7 @@
         <h6>For additional information:</h6>
         <div class="card" id="stackCard">
             <div class="card-body">
-                <div class="stackApi">Search Stack Overflow:
+                <div class="stackApi"> <p>Search Stack Overflow:<br></p>
                     <input type="text" id="search"><button id="stackBtn">submit</button>
                     <br>
                     <div class="stackResults"></div>
