--- a/views/html.handlebars
+++ b/views/html.handlebars
@@ -78,7 +78,7 @@
 <div class="row">
     <div class="col-sm-3"></div>
     <div class="col-sm-6">
-        <div class="commentTitle">Comments:</div>
+        <div class="commentTitle"><h5>Comments:</h5></div>
         <br>
         <form>
             <div class="form-group">
