fixed vid placement

--- a/views/html.handlebars
+++ b/views/html.handlebars
@@ -23,7 +23,7 @@
     <div class="col-sm-3">
         <div class="card">
             <div class="card-body">
-               <p> Computer Programming > Intro into HTML > HTML Basics</p>
+                <p> Computer Programming > Intro into HTML > HTML Basics</p>
             </div>
         </div>
         <div class="card">
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-6" id="codingVid">
+    <div class="col-sm-6 text-center" id="codingVid">
         <iframe width="550" height="450" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
