--- a/views/javascript.handlebars
+++ b/views/javascript.handlebars
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-6" id="codingVid">
+    <div class="col-sm-6 text-center" id="codingVid">
         <iframe width="550" height="450" src="https://www.youtube.com/embed/hdI2bqOjy3c" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
