added logged in as

--- a/views/html.handlebars
+++ b/views/html.handlebars
@@ -6,6 +6,9 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
+            <li class="nav-item">
+                <div class="nav-link navUsername"></div>
+            </li>
             <li class="nav-item active">
                 <a class="nav-link logOut" href="/">Log Out <span class="sr-only">(current)</span></a>
             </li>
@@ -41,7 +44,7 @@
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
 
-         
+
         <br>
 
     </div>
@@ -49,7 +52,8 @@
         <h6>For additional information:</h6>
         <div class="card" id="stackCard">
             <div class="card-body">
-                <div class="stackApi"> <p>Search Stack Overflow:<br></p>
+                <div class="stackApi">
+                    <p>Search Stack Overflow:<br></p>
                     <input type="text" id="search"><button id="stackBtn">submit</button>
                     <br>
                     <div class="stackResults"></div>
@@ -78,7 +82,9 @@
 <div class="row">
     <div class="col-sm-3"></div>
     <div class="col-sm-6">
-        <div class="commentTitle"><h5>Comments:</h5></div>
+        <div class="commentTitle">
+            <h5>Comments:</h5>
+        </div>
         <br>
         <form>
             <div class="form-group">
