--- a/views/javascript.handlebars
+++ b/views/javascript.handlebars
@@ -8,6 +8,9 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
+            <li class="nav-item">
+                <div class="nav-link navUsername"></div>
+            </li>
             <li class="nav-item active">
                 <a class="nav-link logOut" href="/">Log Out <span class="sr-only">(current)</span></a>
             </li>
@@ -44,11 +47,12 @@
 
         <br>
     </div>
-   <div class="col-sm-3">
+    <div class="col-sm-3">
         <h6>For additional information:</h6>
         <div class="card" id="stackCard">
             <div class="card-body">
-                <div class="stackApi"> <p>Search Stack Overflow:<br></p>
+                <div class="stackApi">
+                    <p>Search Stack Overflow:<br></p>
                     <input type="text" id="search"><button id="stackBtn">submit</button>
                     <br>
                     <div class="stackResults"></div>
@@ -77,7 +81,9 @@
 <div class="row">
     <div class="col-sm-3"></div>
     <div class="col-sm-6">
-        <div class="commentTitle"><h5>Comments:</h5></div>
+        <div class="commentTitle">
+            <h5>Comments:</h5>
+        </div>
         <br>
         <form>
             <div class="form-group">
